@@ -1,3 +1,12 @@
+2006-04-06  Michael Natterer  <mitch@gimp.org>
+
+	* app/plug-in/plug-in-run.[ch]: removed plug_in_repeat()...
+
+	* app/actions/plug-in-commands.c: ...and merged it into
+	plug_in_repeat_cmd_callback(). It's essentially the same code as
+	plug_in_run_cmd_callback() and there's no reason (except
+	historical ones) to keep its implementation separate.
+
 2006-04-06  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* plug-ins/common/mkgen.pl
